2011-02-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Eric Seidel.

        REGRESSION: Accelerated transitions are jumpy
        https://bugs.webkit.org/show_bug.cgi?id=55022

        When an accelerated transition used the default timing function,
        a typo in toCAMediaTimingFunction() resulting in the incorrect
        timing function being used.

        Test: transitions/default-timing-function.html

        * platform/graphics/ca/mac/PlatformCAAnimationMac.mm:
        (toCAMediaTimingFunction):

Canonical link: https://commits.webkit.org/69488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79568 268f45cc-cd09-0410-ab3c-d52691b4dbfc