Source/WebCore/platform/graphics/ca/mac/PlatformCAAnimationMac.mm
@@ -136,7 +136,7 @@ static PlatformCAAnimation::ValueFunctionType fromCAValueFunctionType(NSString* 
 static CAMediaTimingFunction* toCAMediaTimingFunction(const TimingFunction* timingFunction)
 {
     if (!timingFunction)
-        return [CAMediaTimingFunction functionWithControlPoints:0.25f :0.1f :0.25f :0.1f];
+        return [CAMediaTimingFunction functionWithControlPoints:0.25f :0.1f :0.25f :1]; // Default is 'ease' function.
             
     if (timingFunction->isCubicBezierTimingFunction()) {
         const CubicBezierTimingFunction* ctf = static_cast<const CubicBezierTimingFunction*>(timingFunction);
@@ -145,8 +145,6 @@ static CAMediaTimingFunction* toCAMediaTimingFunction(const TimingFunction* timi
     }
     
     return [CAMediaTimingFunction functionWithName:kCAMediaTimingFunctionLinear];
-
-    return 0;
 }
 
 PassRefPtr<PlatformCAAnimation> PlatformCAAnimation::create(AnimationType type, const String& keyPath)
